@@ -2,7 +2,7 @@
 # for this test.
 
 use strict;
-use Test::More tests => 9;
+use Test::More tests => 10;
 
 use lib 't';
 use TestLib;
