@@ -8,7 +8,7 @@ use TestLib;
 use lib '/usr/share/postgresql-common';
 use PgCommon;
 
-use Test::More tests => ($#MAJORS+1) * 82 + 9;
+use Test::More tests => ($#MAJORS+1) * 82 + 10;
 
 # create a test cluster with given locale, check the locale/encoding, and
 # remove it
