@@ -150,10 +150,11 @@ sub unlike_program_out {
 
 # Check that all PostgreSQL related directories are empty and no
 # postmaster/pg_autovacuum processes are running. Should be called at the end
-# of all tests. Does 9 tests.
+# of all tests. Does 10 tests.
 sub check_clean {
     is (`pg_lsclusters -h`, '', 'No existing clusters');
     is ((ps 'postmaster'), '', 'No postmaster processes left behind');
+    is ((ps 'postgres'), '', 'No postgres processes left behind');
     is ((ps 'pg_autovacuum'), '', 'No pg_autovacuum processes left behind');
 
     my @check_dirs = ('/etc/postgresql', '/var/lib/postgresql',
